# ada-2024-project-nhsvd

./: .gitignore  01-smn-eda.ipynb  README.md  bags_analysis.ipynb  build_char_word_bags.py  check_openai_batch_job_status.py  corenlp_example.md  parse_corenlp_xml.py  pip_requirements.txt  requirements.txt
character_deaths/: README.md  pyproject.toml
character_deaths/src/character_deaths/cli/: create_batches.py  process_chat.py  retrieve_batch.py  submit_batch.py
character_deaths/src/character_deaths/database/: db.py
character_deaths/src/character_deaths/models/: core.py
character_deaths/src/character_deaths/utils/: __init__.py  common.py  token_counter.py
data/: README.md  preprocessing.md
data/final/: tropes.csv
datastory/: part1-initial-analysis.ipynb  part1-naive-death-analysis.ipynb  part2-bags-death-analysis.ipynb  part2-bags-death.ipynb  part3-dpm-trope.ipynb  part4-final-analysis.ipynb  part5-final-analysis.ipynb
notebooks/: DPM_trope_clustering.ipynb  character_death_analysis.ipynb  death_rate_analysis.ipynb  extract_char_deaths_with_llm.ipynb  process_character_deaths_batch_output.ipynb  trope_clustering.ipynb
src/openai_api_mining/: README.md  pyproject.toml
src/openai_api_mining/character_deaths/: README.md
src/openai_api_mining/character_deaths/src/character_deaths/cli/: create_batches.py  init_db.py  retrieve_batch.py  submit_batch.py
src/openai_api_mining/character_deaths/src/character_deaths/database/: db.py
src/openai_api_mining/character_deaths/src/character_deaths/models/: __init__.py
src/openai_api_mining/src/api_mining/cli/: create_batches.py  init_db.py  process_chat.py  retrieve_batch.py  submit_batch.py
src/openai_api_mining/src/api_mining/database/: db.py
src/openai_api_mining/src/api_mining/models/: char_deaths.py  core.py  tropes.py
src/openai_api_mining/src/api_mining/prompts/: deaths.txt  tropes.txt
src/openai_api_mining/src/api_mining/utils/: common.py  token_counter.py
src/openai_api_mining/trope_clustering/: pyproject.toml
src/openai_api_mining/trope_clustering/src/trope_clustering/cli/: process_chat.py
src/openai_api_mining/trope_clustering/src/trope_clustering/database/: db.py
src/openai_api_mining/trope_clustering/src/trope_clustering/utils/: __init__.py  common.py  token_counter.py
trope_clustering/: README.md
xml_to_csv/: README.md
(+17 files in other folders)
